--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
