--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Corey Maler",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^16.0.5",
     "awesome-typescript-loader": "^3.0.4",
     "express": "^4.14.1",
     "html-webpack-plugin": "^2.28.0",
@@ -27,9 +28,13 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
+    "inversify": "^4.3.0",
+    "inversify-binding-decorators": "^3.0.0",
+    "inversify-inject-decorators": "^3.0.1",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "reflect-metadata": "^0.1.10"
   }
 }
