--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "@types/react": "^16.0.5",
     "awesome-typescript-loader": "^3.0.4",
+    "css-loader": "^0.28.7",
     "express": "^4.14.1",
     "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.18.2",
     "typescript": "^2.5.0",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
@@ -28,6 +30,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
+    "@types/react-virtualized": "^9.7.4",
     "inversify": "^4.3.0",
     "inversify-binding-decorators": "^3.0.0",
     "inversify-inject-decorators": "^3.0.1",
@@ -35,6 +38,7 @@
     "mobx-react": "^4.2.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-virtualized": "^9.9.0",
     "reflect-metadata": "^0.1.10"
   }
 }
